Issues related alignment in search and print

--- a/WebContent/styles/testGenMain.css
+++ b/WebContent/styles/testGenMain.css
@@ -3117,7 +3117,7 @@ li[printmode='false'][optionsview='true'] .blankBtnDiv {
 	font-family: Helvetica Neue Light;
 	font-size: 14px;
 	text-decoration: none !important;
-	margin-top: 10px;
+	margin-top: 8px;
 	cursor: pointer;
 }
 
